[tool.poetry]
name = "jinja-test"
version = "0.1.0"
description = ""
authors = ["Tom Whitwell <tom@whi.tw>"]
readme = "README.md"
packages = [{include = "jinja_test"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
flake8-black = "^0.3.6"
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
