[tool.poetry]
authors = ["Tom Whitwell <tom@whi.tw>"]
description = ""
name = "klipper-adaptive-mesh"
packages = [{include = "fake_printer"}]
readme = "README.md"
version = "0.0.3"

[tool.poetry.dependencies]
jinja2 = "^3.1.2"
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8-black = "^0.3.6"
isort = "^5.12.0"
pytest = "^7.2.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
